// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scanner Should work with arrays 1`] = `
Array [
  Object {
    "__debugKind": "ArraysKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 23,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 1,
    "pos": 7,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 8,
    "kind": 19,
    "pos": 8,
    "value": "10",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 11,
    "fullPos": 10,
    "kind": 1,
    "pos": 10,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 13,
    "fullPos": 11,
    "kind": 19,
    "pos": 12,
    "value": "0",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 14,
    "fullPos": 13,
    "kind": 3,
    "pos": 13,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 14,
    "fullPos": 14,
    "kind": 33,
    "pos": 14,
  },
]
`;

exports[`Scanner Should work with function 1`] = `
Array [
  Object {
    "__debugKind": "DefnKeyword",
    "end": 5,
    "fullPos": 0,
    "kind": 32,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 5,
    "id": "f",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 6,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 7,
    "kind": 2,
    "pos": 7,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 9,
    "fullPos": 8,
    "id": "x",
    "kind": 21,
    "pos": 8,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 10,
    "fullPos": 9,
    "kind": 1,
    "pos": 9,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 12,
    "fullPos": 10,
    "id": "y",
    "kind": 21,
    "pos": 11,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 13,
    "fullPos": 12,
    "kind": 1,
    "pos": 12,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 15,
    "fullPos": 13,
    "id": "z",
    "kind": 21,
    "pos": 14,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 17,
    "fullPos": 15,
    "kind": 3,
    "pos": 16,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 18,
    "fullPos": 17,
    "kind": 4,
    "pos": 17,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 24,
    "fullPos": 18,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 23,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 26,
    "fullPos": 24,
    "kind": 9,
    "pos": 25,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 28,
    "fullPos": 26,
    "id": "y",
    "kind": 21,
    "pos": 27,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 29,
    "fullPos": 28,
    "kind": 33,
    "pos": 29,
  },
]
`;

exports[`Scanner Should work with function call 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 4,
    "fullPos": 2,
    "kind": 19,
    "pos": 2,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 5,
    "fullPos": 4,
    "kind": 3,
    "pos": 4,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 5,
    "fullPos": 5,
    "kind": 33,
    "pos": 5,
  },
]
`;

exports[`Scanner Should work with get shorthand 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "a",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 2,
    "fullPos": 1,
    "kind": 7,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 3,
    "fullPos": 2,
    "kind": 19,
    "pos": 2,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 4,
    "fullPos": 3,
    "kind": 8,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "pos": 4,
  },
]
`;

exports[`Scanner Should work with global variable 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "id": "x",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 4,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 7,
    "kind": 19,
    "pos": 8,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 10,
    "fullPos": 10,
    "kind": 33,
    "pos": 10,
  },
]
`;

exports[`Scanner Should work with if expression 1`] = `
Array [
  Object {
    "__debugKind": "IfKeyword",
    "end": 2,
    "fullPos": 0,
    "kind": 28,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 4,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 3,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 5,
    "fullPos": 4,
    "kind": 4,
    "pos": 4,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 16,
    "fullPos": 5,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 10,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 17,
    "fullPos": 16,
    "kind": 2,
    "pos": 16,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 20,
    "fullPos": 17,
    "kind": 20,
    "pos": 17,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 21,
    "fullPos": 20,
    "kind": 3,
    "pos": 20,
  },
  Object {
    "__debugKind": "ElseKeyword",
    "end": 26,
    "fullPos": 21,
    "kind": 29,
    "pos": 22,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 27,
    "fullPos": 26,
    "kind": 4,
    "pos": 26,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 38,
    "fullPos": 27,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 32,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "pos": 38,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 42,
    "fullPos": 39,
    "kind": 20,
    "pos": 39,
    "value": "B",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 43,
    "fullPos": 42,
    "kind": 3,
    "pos": 42,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 44,
    "fullPos": 43,
    "kind": 33,
    "pos": 44,
  },
]
`;

exports[`Scanner Should work with if expression with only if 1`] = `
Array [
  Object {
    "__debugKind": "IfKeyword",
    "end": 2,
    "fullPos": 0,
    "kind": 28,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 4,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 3,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 5,
    "fullPos": 4,
    "kind": 4,
    "pos": 4,
  },
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 16,
    "fullPos": 5,
    "kind": 22,
    "leadingIndent": 4,
    "pos": 10,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 17,
    "fullPos": 16,
    "kind": 2,
    "pos": 16,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 20,
    "fullPos": 17,
    "kind": 20,
    "pos": 17,
    "value": "A",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 21,
    "fullPos": 20,
    "kind": 3,
    "pos": 20,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 22,
    "fullPos": 21,
    "kind": 33,
    "pos": 22,
  },
]
`;

exports[`Scanner Should work with integer 1`] = `
Array [
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 1,
    "fullPos": 0,
    "kind": 19,
    "pos": 0,
    "value": "1",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 1,
    "fullPos": 1,
    "kind": 33,
    "pos": 1,
  },
]
`;

exports[`Scanner Should work with local expression 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "pos": 2,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 3,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "pos": 4,
  },
]
`;

exports[`Scanner Should work with local variable 1`] = `
Array [
  Object {
    "__debugKind": "VarKeyword",
    "end": 3,
    "fullPos": 0,
    "kind": 26,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 5,
    "fullPos": 3,
    "id": "x",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 4,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 7,
    "fullPos": 5,
    "kind": 6,
    "pos": 6,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 10,
    "fullPos": 7,
    "kind": 19,
    "pos": 8,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 10,
    "fullPos": 10,
    "kind": 33,
    "pos": 10,
  },
]
`;

exports[`Scanner Should work with method call 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "f",
    "kind": 21,
    "pos": 2,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 2,
    "pos": 3,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 6,
    "fullPos": 4,
    "kind": 19,
    "pos": 4,
    "value": "10",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 3,
    "pos": 6,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 7,
    "fullPos": 7,
    "kind": 33,
    "pos": 7,
  },
]
`;

exports[`Scanner Should work with null 1`] = `
Array [
  Object {
    "__debugKind": "NullKeyword",
    "end": 4,
    "fullPos": 0,
    "kind": 24,
    "pos": 0,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "pos": 4,
  },
]
`;

exports[`Scanner Should work with object 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "id": "p",
    "kind": 21,
    "pos": 7,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 3,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 10,
    "fullPos": 9,
    "kind": 4,
    "pos": 9,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 18,
    "fullPos": 10,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 18,
    "id": "x",
    "kind": 21,
    "pos": 19,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 22,
    "fullPos": 20,
    "kind": 6,
    "pos": 21,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 25,
    "fullPos": 22,
    "kind": 19,
    "pos": 23,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 36,
    "fullPos": 25,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 38,
    "fullPos": 36,
    "id": "f",
    "kind": 21,
    "pos": 37,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "pos": 38,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 40,
    "fullPos": 39,
    "kind": 3,
    "pos": 39,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 41,
    "fullPos": 40,
    "kind": 4,
    "pos": 40,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 54,
    "fullPos": 41,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 50,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 55,
    "fullPos": 54,
    "kind": 5,
    "pos": 54,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 56,
    "fullPos": 55,
    "id": "x",
    "kind": 21,
    "pos": 55,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 57,
    "fullPos": 56,
    "kind": 33,
    "pos": 57,
  },
]
`;

exports[`Scanner Should work with object with slots 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 7,
    "fullPos": 6,
    "kind": 2,
    "pos": 6,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 7,
    "id": "p",
    "kind": 21,
    "pos": 7,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 9,
    "fullPos": 8,
    "kind": 3,
    "pos": 8,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 10,
    "fullPos": 9,
    "kind": 4,
    "pos": 9,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 18,
    "fullPos": 10,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 20,
    "fullPos": 18,
    "id": "x",
    "kind": 21,
    "pos": 19,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 22,
    "fullPos": 20,
    "kind": 6,
    "pos": 21,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 25,
    "fullPos": 22,
    "kind": 19,
    "pos": 23,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 36,
    "fullPos": 25,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 30,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 38,
    "fullPos": 36,
    "id": "f",
    "kind": 21,
    "pos": 37,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 39,
    "fullPos": 38,
    "kind": 2,
    "pos": 38,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 40,
    "fullPos": 39,
    "id": "x",
    "kind": 21,
    "pos": 39,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 41,
    "fullPos": 40,
    "kind": 1,
    "pos": 40,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 43,
    "fullPos": 41,
    "id": "y",
    "kind": 21,
    "pos": 42,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 44,
    "fullPos": 43,
    "kind": 1,
    "pos": 43,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 46,
    "fullPos": 44,
    "id": "z",
    "kind": 21,
    "pos": 45,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 47,
    "fullPos": 46,
    "kind": 3,
    "pos": 46,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 48,
    "fullPos": 47,
    "kind": 4,
    "pos": 47,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 61,
    "fullPos": 48,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 57,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 62,
    "fullPos": 61,
    "kind": 5,
    "pos": 61,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 63,
    "fullPos": 62,
    "id": "x",
    "kind": 21,
    "pos": 62,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 65,
    "fullPos": 63,
    "kind": 9,
    "pos": 64,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 67,
    "fullPos": 65,
    "id": "x",
    "kind": 21,
    "pos": 66,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 69,
    "fullPos": 67,
    "kind": 9,
    "pos": 68,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 71,
    "fullPos": 69,
    "id": "y",
    "kind": 21,
    "pos": 70,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 73,
    "fullPos": 71,
    "kind": 9,
    "pos": 72,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 75,
    "fullPos": 73,
    "id": "z",
    "kind": 21,
    "pos": 74,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 76,
    "fullPos": 75,
    "kind": 33,
    "pos": 76,
  },
]
`;

exports[`Scanner Should work with object without extends 1`] = `
Array [
  Object {
    "__debugKind": "ObjectsKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 25,
    "pos": 0,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 7,
    "fullPos": 6,
    "kind": 4,
    "pos": 6,
  },
  Object {
    "__debugKind": "VarKeyword",
    "end": 15,
    "fullPos": 7,
    "kind": 26,
    "leadingIndent": 4,
    "pos": 12,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 17,
    "fullPos": 15,
    "id": "x",
    "kind": 21,
    "pos": 16,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 19,
    "fullPos": 17,
    "kind": 6,
    "pos": 18,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 22,
    "fullPos": 19,
    "kind": 19,
    "pos": 20,
    "value": "10",
  },
  Object {
    "__debugKind": "MethodKeyword",
    "end": 33,
    "fullPos": 22,
    "kind": 31,
    "leadingIndent": 4,
    "pos": 27,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 35,
    "fullPos": 33,
    "id": "f",
    "kind": 21,
    "pos": 34,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 36,
    "fullPos": 35,
    "kind": 2,
    "pos": 35,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 37,
    "fullPos": 36,
    "kind": 3,
    "pos": 36,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 38,
    "fullPos": 37,
    "kind": 4,
    "pos": 37,
  },
  Object {
    "__debugKind": "ThisKeyword",
    "end": 51,
    "fullPos": 38,
    "kind": 27,
    "leadingIndent": 8,
    "pos": 47,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 52,
    "fullPos": 51,
    "kind": 5,
    "pos": 51,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 53,
    "fullPos": 52,
    "id": "x",
    "kind": 21,
    "pos": 52,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 54,
    "fullPos": 53,
    "kind": 33,
    "pos": 54,
  },
]
`;

exports[`Scanner Should work with printing 1`] = `
Array [
  Object {
    "__debugKind": "PrintfKeyword",
    "end": 6,
    "fullPos": 0,
    "kind": 22,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 8,
    "fullPos": 6,
    "kind": 2,
    "leadingIndent": 1,
    "pos": 7,
  },
  Object {
    "__debugKind": "StringLiteralToken",
    "end": 26,
    "fullPos": 8,
    "kind": 20,
    "pos": 8,
    "value": " My age is ~. n ",
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 28,
    "fullPos": 26,
    "kind": 1,
    "pos": 27,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 30,
    "fullPos": 28,
    "kind": 19,
    "pos": 29,
    "value": "8",
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 31,
    "fullPos": 30,
    "kind": 3,
    "pos": 30,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 31,
    "fullPos": 31,
    "kind": 33,
    "pos": 31,
  },
]
`;

exports[`Scanner Should work with set shorthand 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "a",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenBracketToken",
    "end": 2,
    "fullPos": 1,
    "kind": 7,
    "pos": 1,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 3,
    "fullPos": 2,
    "kind": 19,
    "pos": 2,
    "value": "1",
  },
  Object {
    "__debugKind": "CloseBracketToken",
    "end": 4,
    "fullPos": 3,
    "kind": 8,
    "pos": 3,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 6,
    "fullPos": 4,
    "kind": 6,
    "leadingIndent": 1,
    "pos": 5,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 8,
    "fullPos": 6,
    "kind": 19,
    "pos": 7,
    "value": "0",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 8,
    "fullPos": 8,
    "kind": 33,
    "pos": 8,
  },
]
`;

exports[`Scanner Should work with slot assignment 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 2,
    "id": "field",
    "kind": 21,
    "pos": 2,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 9,
    "fullPos": 7,
    "kind": 6,
    "leadingIndent": 1,
    "pos": 8,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 12,
    "fullPos": 9,
    "kind": 19,
    "pos": 10,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 12,
    "fullPos": 12,
    "kind": 33,
    "pos": 12,
  },
]
`;

exports[`Scanner Should work with slot lookup 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "o",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "DotToken",
    "end": 2,
    "fullPos": 1,
    "kind": 5,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 2,
    "id": "field",
    "kind": 21,
    "pos": 2,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 7,
    "fullPos": 7,
    "kind": 33,
    "pos": 7,
  },
]
`;

exports[`Scanner Should work with statement sequences 1`] = `
Array [
  Object {
    "__debugKind": "OpenParenToken",
    "end": 1,
    "fullPos": 0,
    "kind": 2,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 4,
    "fullPos": 1,
    "id": "s1",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 2,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 5,
    "fullPos": 4,
    "kind": 1,
    "pos": 4,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 8,
    "fullPos": 5,
    "id": "s2",
    "kind": 21,
    "pos": 6,
  },
  Object {
    "__debugKind": "CommaToken",
    "end": 9,
    "fullPos": 8,
    "kind": 1,
    "pos": 8,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 12,
    "fullPos": 9,
    "id": "s3",
    "kind": 21,
    "pos": 10,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 14,
    "fullPos": 12,
    "kind": 3,
    "pos": 13,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 14,
    "fullPos": 14,
    "kind": 33,
    "pos": 14,
  },
]
`;

exports[`Scanner Should work with top level expression 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "f",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "OpenParenToken",
    "end": 2,
    "fullPos": 1,
    "kind": 2,
    "pos": 1,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 3,
    "fullPos": 2,
    "id": "x",
    "kind": 21,
    "pos": 2,
  },
  Object {
    "__debugKind": "CloseParenToken",
    "end": 4,
    "fullPos": 3,
    "kind": 3,
    "pos": 3,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 4,
    "fullPos": 4,
    "kind": 33,
    "pos": 4,
  },
]
`;

exports[`Scanner Should work with variable assignment 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "x",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 3,
    "fullPos": 1,
    "kind": 6,
    "leadingIndent": 1,
    "pos": 2,
  },
  Object {
    "__debugKind": "IntegerLiteralToken",
    "end": 6,
    "fullPos": 3,
    "kind": 19,
    "pos": 4,
    "value": "42",
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 6,
    "fullPos": 6,
    "kind": 33,
    "pos": 6,
  },
]
`;

exports[`Scanner Should work with variable reference 1`] = `
Array [
  Object {
    "__debugKind": "Identifier",
    "end": 1,
    "fullPos": 0,
    "id": "x",
    "kind": 21,
    "pos": 0,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 1,
    "fullPos": 1,
    "kind": 33,
    "pos": 1,
  },
]
`;

exports[`Scanner Should work with while expression 1`] = `
Array [
  Object {
    "__debugKind": "WhileKeyword",
    "end": 5,
    "fullPos": 0,
    "kind": 30,
    "pos": 0,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 7,
    "fullPos": 5,
    "id": "x",
    "kind": 21,
    "leadingIndent": 1,
    "pos": 6,
  },
  Object {
    "__debugKind": "ColonToken",
    "end": 8,
    "fullPos": 7,
    "kind": 4,
    "pos": 7,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 14,
    "fullPos": 8,
    "id": "x",
    "kind": 21,
    "leadingIndent": 4,
    "pos": 13,
  },
  Object {
    "__debugKind": "EqualsToken",
    "end": 16,
    "fullPos": 14,
    "kind": 6,
    "pos": 15,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 18,
    "fullPos": 16,
    "id": "x",
    "kind": 21,
    "pos": 17,
  },
  Object {
    "__debugKind": "AddToken",
    "end": 20,
    "fullPos": 18,
    "kind": 9,
    "pos": 19,
  },
  Object {
    "__debugKind": "Identifier",
    "end": 22,
    "fullPos": 20,
    "id": "y",
    "kind": 21,
    "pos": 21,
  },
  Object {
    "__debugKind": "EndOfFileToken",
    "end": 23,
    "fullPos": 22,
    "kind": 33,
    "pos": 23,
  },
]
`;
